# skill-doctor

./: .actrc  .dockerignore  .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .secrets.baseline  .secrets.example  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: CODEOWNERS  PRE_COMMIT.md  REPOSITORY_SETUP.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  pre-commit.yml  release.yml
examples/workflows/: basic-validation.yml  pr-changed-only.yml  warning-only.yml
scripts/: test-action-local.sh  test-docker-local.sh  test-docker-watch.sh  test-with-act.sh
src/skill_doctor/: __init__.py  github_integration.py  main.py  models.py  skill_finder.py  validator.py
tests/: test_validator.py
tests/fixtures/edge-cases/compatibility-too-long/: SKILL.md
tests/fixtures/edge-cases/description-empty/: SKILL.md
tests/fixtures/edge-cases/description-too-long/: SKILL.md
tests/fixtures/edge-cases/invalid-yaml/: SKILL.md
tests/fixtures/edge-cases/missing-description/: SKILL.md
tests/fixtures/edge-cases/missing-name/: SKILL.md
tests/fixtures/edge-cases/name-too-long/: SKILL.md
tests/fixtures/edge-cases/name-with-consecutive-hyphens/: SKILL.md
tests/fixtures/edge-cases/name-with-uppercase/: SKILL.md
tests/fixtures/edge-cases/no-frontmatter/: SKILL.md
tests/fixtures/edge-cases/unclosed-frontmatter/: SKILL.md
tests/fixtures/edge-cases/unexpected-fields/: SKILL.md
tests/fixtures/file-structure/: not-a-directory.txt
tests/fixtures/file-structure/name-directory-mismatch/: SKILL.md
tests/fixtures/file-structure/no-skill-md/: README.md
tests/fixtures/file-structure/skill-md-lowercase/: skill.md
tests/fixtures/invalid-skill/: SKILL.md
tests/fixtures/multiple-skills/all-invalid/bad-description/: SKILL.md
tests/fixtures/multiple-skills/all-invalid/bad-name/: SKILL.md
tests/fixtures/multiple-skills/all-valid/skill-one/: SKILL.md
tests/fixtures/multiple-skills/all-valid/skill-three/: SKILL.md
tests/fixtures/multiple-skills/all-valid/skill-two/: SKILL.md
tests/fixtures/multiple-skills/mixed-valid-invalid/invalid-description/: SKILL.md
tests/fixtures/multiple-skills/mixed-valid-invalid/invalid-name/: SKILL.md
tests/fixtures/multiple-skills/mixed-valid-invalid/valid-skill/: SKILL.md
tests/fixtures/optional-fields/with-allowed-tools/: SKILL.md
tests/fixtures/optional-fields/with-compatibility/: SKILL.md
tests/fixtures/optional-fields/with-license/: SKILL.md
tests/fixtures/optional-fields/with-metadata/: SKILL.md
tests/fixtures/valid-skill/: SKILL.md
